src/objects/ProjectSnapshot__c.object
<CustomObject>
    <fields>
        <fullName>AR0to30Comments__c</fullName>
        <label>AR 0 to 30 Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AR0to30__c</fullName>
        <label>AR 0 to 30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AR0to90Comments__c</fullName>
        <label>AR 0 to 90 Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AR0to90__c</fullName>
        <formula>AR0to30__c + AR31to60__c + AR61to90__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR 0 to 90</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AR181PlusComments__c</fullName>
        <label>AR 181 Plus Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AR181Plus__c</fullName>
        <label>AR 181 Plus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AR31to60Comments__c</fullName>
        <label>AR 31 to 60 Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AR31to60__c</fullName>
        <label>AR 31 to 60</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AR61PlusComments__c</fullName>
        <label>AR 61 Plus Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AR61Plus__c</fullName>
        <formula>AR61to90__c +  AR91to180__c +  AR181Plus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR 61 Plus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AR91PlusComments__c</fullName>
        <label>AR 91 Plus Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AR91Plus__c</fullName>
        <formula>AR91to180__c + AR181Plus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR 91 Plus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARBIEEComments__c</fullName>
        <label>AR BIEE Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ARBIEE__c</fullName>
        <label>AR BIEE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ARComments__c</fullName>
        <label>AR Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ARDaysActual__c</fullName>
        <formula>ARTotal__c /( AR0to90__c /91)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR Days Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARRetentionComments__c</fullName>
        <label>AR Retention Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ARRetention__c</fullName>
        <label>AR Retention</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARTotalComments__c</fullName>
        <label>AR Total Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ARTotal__c</fullName>
        <label>AR Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AR__c</fullName>
        <label>AR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alerts__c</fullName>
        <label>Alerts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AvgLaborHourBudgetOriginal__c</fullName>
        <formula>LaborBudgetOriginal__c / HoursBudgetOriginal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Labor/Hour Budget Original</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvgLaborHourBudget__c</fullName>
        <formula>LaborBudget__c / HoursBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Labor/Hour Budget</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvgLaborHourETC__c</fullName>
        <formula>LaborETC__c/HoursETC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Labor/Hour ETC</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvgLaborHourForecastDelta__c</fullName>
        <formula>LaborForecastDelta__c / HoursForecastDelta__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Labor/Hour Forecast Delta</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvgLaborHourForecastPrevME__c</fullName>
        <formula>LaborForecastPrevME__c / HoursForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Labor/Hour Forecast Prev. ME</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvgLaborHourForecast__c</fullName>
        <formula>LaborForecast__c / HoursForecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Labor/Hour Forecast</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvgLaborHourITD__c</fullName>
        <formula>LaborITD__c / HoursITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Labor/Hour ITD</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvgLaborHourMonthToDate__c</fullName>
        <formula>LaborMonthToDate__c / HoursMonthToDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Labor/Hour Month To Date</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvgLaborHourYearToDate__c</fullName>
        <formula>LaborYearToDate__c/HoursYearToDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avg. Labor/Hour Year To Date</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetChanges__c</fullName>
        <label>Budget Changes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetSpentCost__c</fullName>
        <label>% Budget Spent (Cost)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CashFlowITDPrevME__c</fullName>
        <label>Cash Flow ITD Prev. ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CashFlowITD__c</fullName>
        <formula>GrossRevenueITD__c -  AR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Flow ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CashPerfRetentionComments__c</fullName>
        <label>CashPerfRetentionComments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChangeManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Manager</label>
        <referenceTo>ChangeManager__c</referenceTo>
        <relationshipLabel>Project Snapshots</relationshipLabel>
        <relationshipName>Project_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChangeOrdersDraft__c</fullName>
        <label>Change Orders Draft</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChangeOrdersPending__c</fullName>
        <label>Change Orders Pending</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClientName__c</fullName>
        <label>Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContingencyBudgetOriginal__c</fullName>
        <label>Contingency Budget Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContingencyBudget__c</fullName>
        <label>Contingency Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContingencyDraft__c</fullName>
        <label>Contingency Draft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContingencyForecastDelta__c</fullName>
        <formula>ContingencyForecast__c -  ContingencyForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contingency Forecast Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContingencyForecastPrevME__c</fullName>
        <label>Contingency Forecast Prev. ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContingencyForecast__c</fullName>
        <label>Contingency Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContingencyITD__c</fullName>
        <label>Contingency ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContingencyMonthToDate__c</fullName>
        <label>Contingency Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContingencyUnapproved__c</fullName>
        <label>Contingency Unapproved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContingencyYearToDate__c</fullName>
        <label>Contingency Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostBudget__c</fullName>
        <label>Cost Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostDraft__c</fullName>
        <label>Cost Draft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostETC__c</fullName>
        <formula>CostForecast__c -  CostITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost ETC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CostForecast__c</fullName>
        <label>Cost Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostITD__c</fullName>
        <label>Cost ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostMonthToDate__c</fullName>
        <label>Cost Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostOrigBudget__c</fullName>
        <label>Cost Orig Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CostUnapproved__c</fullName>
        <label>Cost Unapproved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostYearToDate__c</fullName>
        <label>Cost Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostsODCEXPSBudgetOriginal__c</fullName>
        <label>Costs ODC EXPS Budget Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostsODCEXPSBudget__c</fullName>
        <label>Costs ODC EXPS Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostsODCEXPSETC__c</fullName>
        <formula>CostsODCEXPSForecast__c -  CostsODCEXPSITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costs ODC EXPS ETC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CostsODCEXPSForecastDelta__c</fullName>
        <formula>CostsODCEXPSForecast__c -  CostsODCEXPSForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costs ODC EXPS Forecast Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CostsODCEXPSForecastPrevME__c</fullName>
        <label>Costs ODC EXPS Forecast Prev. ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostsODCEXPSForecast__c</fullName>
        <label>Costs ODC EXPS Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostsODCEXPSITD__c</fullName>
        <label>Costs ODC EXPS ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostsODCEXPSMonthtoDate__c</fullName>
        <label>Costs ODC EXPS Month to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostsODCEXPSYearToDate__c</fullName>
        <label>Costs ODC EXPS Year To Date</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostsODCSUBSBudgetOriginal__c</fullName>
        <label>Costs ODC SUBS Budget Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostsODCSUBSBudget__c</fullName>
        <label>Costs ODC SUBS Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostsODCSUBSETC__c</fullName>
        <formula>CostsODCSUBSForecast__c -  CostsODCSUBSITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costs ODC SUBS ETC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CostsODCSUBSForecastDelta__c</fullName>
        <formula>CostsODCSUBSForecast__c -  CostsODCEXPSForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Costs ODC SUBS Forecast Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CostsODCSUBSForecastPrevME__c</fullName>
        <label>Costs ODC SUBS Forecast Prev. ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostsODCSUBSForecast__c</fullName>
        <label>Costs ODC SUBS Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostsODCSUBSITD__c</fullName>
        <label>Costs ODC SUBS ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostsODCSUBSMonthtoDate__c</fullName>
        <label>Costs ODC SUBS Month to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CostsODCSUBSYearToDate__c</fullName>
        <label>Costs ODC SUBS Year To Date</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentBudgetAsOfDate__c</fullName>
        <label>Current Budget As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentBudget__c</fullName>
        <label>Current Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DSO__c</fullName>
        <formula>TotalWorkingCapital__c /( AR0to90__c /91)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DSO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EarnedValueActualSpend__c</fullName>
        <label>Earned Value Actual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EarnedValueCPI__c</fullName>
        <label>CPI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EarnedValueLastUpdated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EarnedValueOverallProgress__c</fullName>
        <label>Earned Value Overall Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EarnedValuePercentBudgetSpent__c</fullName>
        <label>EarnedValuePercentBudgetSpent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EarnedValuePlannedValue__c</fullName>
        <label>Planned Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EarnedValueSPI__c</fullName>
        <label>SPI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EarnedValue__c</fullName>
        <label>Earned Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpenditureComments__c</fullName>
        <label>Expenditure Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FandAParticipantTitle__c</fullName>
        <label>F&amp;A Participant (Title)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FringeBudgetOriginal__c</fullName>
        <label>Fringe Budget Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FringeBudget__c</fullName>
        <label>Fringe Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FringeETC__c</fullName>
        <formula>FringeForecast__c - FringeITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fringe ETC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FringeForecastDelta__c</fullName>
        <formula>FringeForecast__c -  FringeForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fringe Forecast Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FringeForecastPrevME__c</fullName>
        <label>Fringe Forecast Prev. ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FringeForecast__c</fullName>
        <label>Fringe Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FringeITD__c</fullName>
        <label>Fringe ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FringeMonthToDate__c</fullName>
        <label>Fringe Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FringeYearToDate__c</fullName>
        <label>Fringe Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FutureSpendMonth10__c</fullName>
        <label>FutureSpendMonth10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FutureSpendMonth11__c</fullName>
        <label>FutureSpendMonth11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FutureSpendMonth12__c</fullName>
        <label>FutureSpendMonth12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMNSRBudgetOriginal__c</fullName>
        <formula>GrossMarginBudgetOriginal__c / NetServiceBudgetOriginal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMNSR Budget Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GMNSRBudget__c</fullName>
        <formula>GrossMarginBudget__c / NetServiceBudget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMNSR Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GMNSRETC__c</fullName>
        <formula>GrossMarginETC__c / NetServiceETC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMNSR ETC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GMNSRForecastDelta__c</fullName>
        <formula>GMNSRForecast__c -  GMNSRForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMNSR Forecast Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GMNSRForecastPrevME__c</fullName>
        <formula>GrossMarginForecastPrevME__c / NetMarginForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMNSR Forecast Prev. ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GMNSRForecast__c</fullName>
        <formula>GrossMarginForecast__c /  NetServiceForecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMNSR Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GMNSRITD__c</fullName>
        <formula>GrossMarginITD__c /  NetServiceITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMNSR ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GMNSRMonthToDate__c</fullName>
        <formula>GrossMarginMonthToDate__c /  NetServiceMonthToDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMNSR Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GMNSRYearToDate__c</fullName>
        <formula>GrossMarginYearToDate__c /  NetServiceYearToDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GMNSR Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GrossMarginBudgetOriginal__c</fullName>
        <formula>NetServiceBudgetOriginal__c - ( LaborBudgetOriginal__c +  FringeBudgetOriginal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin Budget Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossMarginBudget__c</fullName>
        <formula>NetServiceBudget__c - ( LaborBudget__c +  FringeBudget__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossMarginETC__c</fullName>
        <formula>NetServiceETC__c - ( LaborETC__c  +  FringeETC__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin ETC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossMarginForecastDelta__c</fullName>
        <formula>GrossMarginForecast__c -  GrossMarginForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin Forecast Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossMarginForecastPrevME__c</fullName>
        <formula>NetServiceForecastPrevME__c  -  (LaborForecastPrevME__c +  FringeForecastPrevME__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin Forecast Prev. ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossMarginForecast__c</fullName>
        <formula>NetServiceForecast__c - ( LaborForecast__c  +  FringeBudget__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossMarginITD__c</fullName>
        <formula>NetServiceITD__c - ( LaborITD__c  +  FringeITD__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossMarginMonthToDate__c</fullName>
        <formula>NetServiceMonthToDate__c - ( LaborMonthToDate__c +  FringeMonthToDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossMarginYearToDate__c</fullName>
        <formula>NetServiceYearToDate__c - (  LaborYearToDate__c +  FringeYearToDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossRevenueBudgetOriginal__c</fullName>
        <label>Gross Revenue Budget Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrossRevenueBudget__c</fullName>
        <label>Gross Revenue Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrossRevenueDraft__c</fullName>
        <label>Gross Revenue Draft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrossRevenueETC__c</fullName>
        <formula>GrossRevenueForecast__c - GrossRevenueITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Revenue ETC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossRevenueForecastDelta__c</fullName>
        <formula>GrossRevenueForecast__c - GrossRevenueForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Revenue Forecast Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GrossRevenueForecastPrevME__c</fullName>
        <label>Gross Revenue Forecast Prev. ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrossRevenueForecast__c</fullName>
        <label>Gross Revenue Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrossRevenueITD__c</fullName>
        <label>Gross Revenue ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrossRevenueMonthToDate__c</fullName>
        <label>Gross Revenue Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrossRevenueUnapproved__c</fullName>
        <label>Gross Revenue Unapproved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrossRevenueYearToDate__c</fullName>
        <label>Gross Revenue Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoursBudgetOriginal__c</fullName>
        <label>Hours Budget Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoursBudget__c</fullName>
        <label>Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoursETC__c</fullName>
        <formula>HoursForecast__c -  HoursITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours ETC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoursForecastDelta__c</fullName>
        <formula>HoursForecast__c - HoursForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Forecast Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoursForecastPrevME__c</fullName>
        <label>Hours Forecast Prev. ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoursForecast__c</fullName>
        <label>Hours Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoursITD__c</fullName>
        <label>Hours ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoursMonthToDate__c</fullName>
        <label>Hours Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HoursYearToDate__c</fullName>
        <label>Hours Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvoiceDescription__c</fullName>
        <label>Invoice Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InvoicedCommitmentCurrency__c</fullName>
        <label>Invoiced Commitment Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvoicedFunctionalCurrency__c</fullName>
        <label>Invoiced Functional Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>